--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,3 +1,22 @@
+@media only screen and (max-width: 810px) {
+    .col-num {
+        display: none;
+    }
+    .col-content {
+        width: 100%;
+    }
+}
+
+@media only screen and (min-width: 811px) {
+    .col-content{
+        width: 19%;
+    }
+
+}
+
+.row {
+    margin: 0;
+}
 
 .header {
     margin: 1em 0;
@@ -52,5 +71,8 @@ span {
     font-size: 1.15rem;
     font-style: italic;
     color: purple;
+}
+.col-num {
+    width: 90%;
 }
 
